# semantic_search_cli

./: .gitignore  Cargo.toml  README.md  build.rs  demo.cast  parameters.txt
src/: chunk_text.rs  database.rs  generate_embeddings.rs  image_to_text.rs  index.rs  index_pdf.rs  lazy_init.rs  main.rs  pdf_to_image.rs  pdf_to_text.rs  search_index.rs  vector_index.rs
