[package]
name = "semantic_search_cli"
version = "0.1.0"
edition = "2021"
links = "pdfium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add rust-bert dependency crate with feature onnx
ort = { version = "2.0.0-rc.5" }
usearch = "2.15.3"
fastembed = "^4"
anyhow = "1.0.90"
memmap2 = "0.9.5"
pdfium-render = { version = "0.8.25", features = ["static"] }
image = "0.25.4"
unicode-segmentation = "1.12.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
itertools = "0.12.1"
log = "0.4.22"
env_logger = "0.11.5"
rusty-tesseract = "1.1.10"
dirs = "5.0"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
ureq = "3.0.0-rc2"
serde = { version = "1.0.210", features = ["derive"] }
tar = "0.4.42"